--- a/package.json
+++ b/package.json
@@ -4,18 +4,20 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node index.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "@discordjs/builders": "^0.15.0",
-    "@discordjs/opus": "^0.5.3",
+    "@discordjs/opus": "^0.9.0",
     "@discordjs/rest": "^0.5.0",
     "@discordjs/voice": "^0.10.0",
     "discord-api-types": "^0.33.5",
     "discord-player": "^5.2.2",
-    "discord.js": "^13.8.0",
-    "dotenv": "^16.0.1"
+    "discord.js": "^14.3.0",
+    "dotenv": "^16.0.1",
+    "ffmpeg-static": "^5.1.0"
   }
 }
